c5d_include_files =	c5d_bar_graph.h \
										c5d_surface.h \
										c5d_vector.h \
										lGrid.h

c5d_source_files =	c5d_bar_graph.cpp \
										c5d_surface.cpp \
										c5d_vector.cpp \
										lGrid.cpp
										
# noinst_LIBRARIES = libc5dSupport.a
# 
# libc5dSupport_a_SOURCES = $(c5d_include_files) $(c5d_source_files)
# libc5dSupport_a_CPPFLAGS = -I$(srcdir)/include

